align fix

--- a/JS-PROJECTS/ast4/style.css
+++ b/JS-PROJECTS/ast4/style.css
@@ -15,6 +15,10 @@ body {
     margin: 0% auto;
 }
 
+.car-game {
+    padding-left: 6%;
+}
+
 .play {
     border: 1px solid #000;
     position: absolute;
